change cursor to pointer when hovering over .well class. Change .toggle modifier to .slideToggle for design purposes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,10 @@ body {
   background-color: grey;
   background-blend-mode: screen;
   padding-top: 5px;
-
 }
 
-.front {
+.well:hover {
+  cursor: pointer;
 }
 
 .back {
